# contract-hello-world

./: .gitignore  README.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
.aws-sam/cache/9cbc5a8e-ee83-4170-8d38-9fff4300de6d/: bootstrap
rust_app/: Cargo.toml
rust_app/src/: data.json  logic.rs  main.rs
rust_app/src/lib/: mod.rs  org_accordproject_helloworld.rs
